--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         <div class = "container">
             <div class = "row">
                 <div class = "col-6">
-                    <section class = "player">
-                        <h2 id = "player-1-name"class= "player-name">Waiting for Player 1</h1>
-                    </section>
+                    <h2 id = "player-1-name"class= "player-name">Waiting for Player 1</h1>
                 </div>
                 <div class = "col-6">
                     <section class = "player">
@@ -33,7 +31,7 @@
             <div class = "row">
                 <div class = "col-6">
                     <div class = "player-box" id="player-1-box">
-                        <div id = "Player1-choice"></div>
+                        <i class ="far fa-handshake hidden"id="Player1-handshake"></i>
                         <div id = "Player1-choices" class ="hidden">
                             <button class = "choice" value = "rock"><i class="far fa-hand-rock"></i></button>
                             <button class = "choice" value = "paper"><i class="far fa-hand-paper"></i></button>
@@ -51,7 +49,7 @@
                 </div>
                 <div class = "col-6">
                     <div class = "player-box" id="player-2-box">
-                        <div id = "Player2-choice"></div>
+                        <i class ="far fa-handshake hidden"id="Player2-handshake"></i>
                         <div id = "Player2-choices" class = "hidden">
                             <button class = "choice" value = "rock"><i class="far fa-hand-rock"></i></button>
                             <button class = "choice" value = "paper"><i class="far fa-hand-paper"></i></button>
@@ -85,9 +83,9 @@
                 <div class = "col-12">
                     <form id = "sign-in">
                         <input type = "text" id = "name">
-                        <button type = "submit">Sign In</button>
+                        <button type = "submit" class = "sign">Sign In</button>
                     </form>
-                    <button id = "sign-out">Sign Out</button>
+                    <button id = "sign-out" class = "sign">Sign Out</button>
                 </div>
             </div>
         </div>
